# pyuniverse

./: .gitmodules  CMakeLists.txt  PythonicUniverse.geany  iterutils.py  py-universe.py  pyuni-client.cpp  unitest.py
Client/: PythonicUniverse.py
Engine/: Application.py
Engine/GL/: Base.py  Material.py  RenderModel.py  Shader.py  StateManagement.py  Texture.py  __init__.py
Engine/GL/SceneGraph/: Core.py
Engine/Resources/: MaterialLoader.py  TextureLoader.py
Engine/Synchronization/: Client.py  IDManagement.py  NPManager.py  Properties.py  Service.py  TestLocal.py  Tuples.py  test_IDManagement.py  test_Properties.py  test_Tuples.py
Engine/UI/: LabelWidget.py  SceneWidget.py  WidgetBase.py
Logic/: Cargo.py  Entity.py  Errors.py  Freeze.py  Object.py  Station.py  Synchronization.py  test_Cargo.py  test_Freeze.py
Logic/Objects/: Cargo.py  Object.py  Sector.py  Station.py  test_Cargo.py
Logic/Synchronization/: IDManagement.py  Properties.py  Service.py  test_IDManagement.py  test_Tuples.py
cpphost/SceneGraph/: BoundingSphere.cpp  BoundingSphere.hpp  BoundingVolume.cpp  BoundingVolume.hpp  CMakeLists.txt  Leaf.cpp  Leaf.hpp  Node.cpp  SceneGraph.cpp  Spatial.cpp  Spatial.hpp
docs/: AUTHORS  DEPENDENCIES  TODO  classmap.xmind  ui.xmind
